2009-10-15 Pierre Wieser <pwieser@trychlos.org>

	New 'Ask user' import mode.

	* data/nautilus-actions.schemas.in:
	Define new 'import-ask-user' preference schema.
	Add 'Ask user' new value for 'import-mode' preference.

	* po/POTFILES.in:
	* src/nact/Makefile.am:
	Add 'src/nact/nact-assistant-import-ask.c' new file.

	* src/common/na-iprefs.c:
	* src/common/na-iprefs.h:
	* src/nact/nact-assistant-import.c:
	* src/nact/nact-preferences-editor.c:
	Define IPREFS_IMPORT_ASK new import mode.
	na_iprefs_get_import_mode, na_iprefs_set_import_mode now take
	the preference name as an argument.

	* src/nact/nact-main-window.c
	(nact_main_window_action_exists): Renamed as
	nact_main_window_get_item.

	* src/nact/nautilus-actions-config-tool.ui:
	* src/nact/nact-assistant-import-ask.c:
	* src/nact/nact-assistant-import-ask.h:
	New AssistantImportAsk dialog box.

	* src/nact/nact-xml-reader.c (manager_import_mode):
	Now may ask the user to know what to do.

	* src/nact/nact-xml-reader.h:
	No more redefine import modes here !

2009-10-14 Pierre Wieser <pwieser@trychlos.org>

	* configure.ac:
	Bump version number to 2.29.1 due to branch for 2.28.

	* src/nact/nact-iactions-list.c:
	Maintains a list of modified items, cleared when saving.
	Define a new "status-changed" signal.

	* src/nact/nact-main-menubar.c:
	Update action sensitivities when a status is changed.

	* src/nact/nact-tree-model.c (drop_inside_adjust_dest):
	Also used to validate when dropping an uri.
	(drop_uri_list): Check status of imported actions.
	(drop_inside_move_dest): Fix when moving a subitem down.
	(drop_inside): Delete the moved item before preparing to paste.

	* src/plugin/nautilus-actions.c (instance_init):
	Check status of loaded items.

	* src/runtime/na-gconf-provider.c:
	Manage unknown types.

	* src/runtime/na-iio-provider.c (na_iio_provider_get_items_tree):
	No more check here status of loaded items.

	* src/runtime/na-pivot.c:
	* src/runtime/na-pivot.h (na_pivot_check_status): New function.
